EB-2003-05-08-0  Bugfix:    settings.[c]sh did not set LD_LIBRARY_PATH
                            correctly if multiple GE installations are present
                 Review:    AS
                 Changed:   dist/util/create_settings.sh

CR-2003-05-07-0  Testsuite: fixed error for install_core_system check:
                            don't add complex list "global" if it already
                            exists.

EB-2003-05-07-0  Cleanup:   wrapper functions to access QU_qtype attribute
                            (part 1: move pe/ckpt references intgo QU_Type 
                             object) 

JG-2003-05-06-0  Bugfix:    array tasks were not deleted (bug introduced in 
                            change JG-2003-04-29-0), some cleanup.
                 Review:    EB

EB-2003-05-05-0  Bugfix:    qhost -F broken
                 Issue:     530

EB-2003-05-02-0  Bugfix:    broken build

CR-2003-04-30-0  Testsuite: modified scheduler test to create more queue 
                            instances

JG-2003-04-29-0  Enhancem.: Reset information which fields have changed in 
                            qmaster's objects after spooling and sending events.
                 Bugfix:    Removed some classic spooling code from qmaster 
                            (replaced by calls to spooling framework).
                 Review:    EB

EB-2003-04-29-0  Bugfix:    SGEEE: scheduler dispatches wrong jobs if there
                            are jobs in the list of pending jobs which had
                            an error state or which have been rescheduled
                            previously
                 Issue:     532
                 Bugtraq:   4847814
                 Changed:   sge_schedd, qstat, qmon
                 Review:    AH, (SD)

CR-2003-04-28-0  Testsuite: New scheduler test.
                            - testing consumables performance for scheduler

CR-2003-04-25-0  Testsuite: Bugfix for spool_array_to_file() when spooling